[gd_scene load_steps=41 format=3 uid="uid://k0em1dn6s2ry"]

[ext_resource type="Script" path="res://scripts/main_gameplay.gd" id="1_sqiqn"]
[ext_resource type="PackedScene" uid="uid://ci8h3yqpc5swd" path="res://scenes/enemies/squirrel.tscn" id="2_kor3a"]
[ext_resource type="PackedScene" uid="uid://ds343cg4f2rgm" path="res://scenes/enemies/mouse.tscn" id="3_5jhd6"]
[ext_resource type="PackedScene" uid="uid://d0ms031j0n5dd" path="res://scenes/enemies/bird.tscn" id="4_8ll1f"]
[ext_resource type="Texture2D" uid="uid://d2gof54kg3e2f" path="res://assets/ui/scorebox/UIDarah.png" id="5_d64xt"]
[ext_resource type="Texture2D" uid="uid://bpg5gmkf4rexp" path="res://assets/ui/scorebox/UITikus.png" id="6_3lu0v"]
[ext_resource type="Texture2D" uid="uid://dqck8dbmb10sl" path="res://assets/gamesprites/background/maingame_topbg.png" id="6_gf4l3"]
[ext_resource type="FontFile" uid="uid://mop3gahfptvb" path="res://fonts/monogram-extended.ttf" id="6_p4kw7"]
[ext_resource type="Texture2D" uid="uid://j7xr152boy14" path="res://assets/ui/scorebox/UIJagung.png" id="7_75yve"]
[ext_resource type="Texture2D" uid="uid://c85umkm50513w" path="res://assets/gamesprites/level/cropsfloor.png" id="7_u8sly"]
[ext_resource type="Texture2D" uid="uid://dndperi3r3isv" path="res://assets/gamesprites/background/maingame_bottombg.png" id="7_yye6d"]
[ext_resource type="PackedScene" uid="uid://b3lt1gg6w63ux" path="res://scenes/grouped_nodes/grounds.tscn" id="8_40p8q"]
[ext_resource type="PackedScene" uid="uid://ckrqes2ef71te" path="res://scenes/blocker.tscn" id="8_sruy8"]
[ext_resource type="PackedScene" uid="uid://cag2xo07f5vge" path="res://scenes/grouped_nodes/walls.tscn" id="9_y41ub"]
[ext_resource type="PackedScene" uid="uid://bg1yowgs0xhkn" path="res://scenes/grouped_nodes/enemy_spawners.tscn" id="10_4qgsn"]
[ext_resource type="PackedScene" uid="uid://bb788xygbe5qp" path="res://scenes/grouped_nodes/corncob_spawner.tscn" id="11_vfcf1"]
[ext_resource type="PackedScene" uid="uid://brb0icctws8db" path="res://scenes/cobia.tscn" id="12_pg2vy"]
[ext_resource type="Shader" path="res://shaders/cooldown_v3.gdshader" id="13_tq1tt"]
[ext_resource type="Texture2D" uid="uid://3pf34rq5hkuc" path="res://assets/ui/buttons/swap_button.png" id="14_4j7ox"]
[ext_resource type="Texture2D" uid="uid://b6ilhf0pgf38" path="res://assets/ui/buttons/swap_button_pressed.png" id="15_2ndgp"]
[ext_resource type="Script" path="res://scripts/debug/debug_button.gd" id="16_kt6oy"]
[ext_resource type="Texture2D" uid="uid://bag2pvpm80skp" path="res://assets/ui/buttons/buttons-global.png" id="17_flv2h"]
[ext_resource type="Script" path="res://addons/shaker/src/Vector2/shaker_component2D.gd" id="18_06dll"]
[ext_resource type="Resource" uid="uid://bs2biqsbifqpu" path="res://resources/shaker_smooth_shake_smaller.tres" id="19_bvgs0"]
[ext_resource type="Script" path="res://scripts/destroy_at_runtime.gd" id="19_o2rfv"]

[sub_resource type="LabelSettings" id="LabelSettings_nl51t"]
font = ExtResource("6_p4kw7")
font_size = 86
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vu2um"]
font = ExtResource("6_p4kw7")
font_size = 86
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ll3m6"]
font_size = 51

[sub_resource type="Animation" id="Animation_r0r68"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_q5psc"]
resource_name = "labelbounce"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ojkvo"]
_data = {
"RESET": SubResource("Animation_r0r68"),
"labelbounce": SubResource("Animation_q5psc")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hckqv"]
shader = ExtResource("13_tq1tt")
shader_parameter/cooldown_progress = 0.0
shader_parameter/start_angle = 90.0

[sub_resource type="AtlasTexture" id="AtlasTexture_pj2hy"]
atlas = ExtResource("17_flv2h")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1y6d"]
atlas = ExtResource("17_flv2h")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwd4q"]
atlas = ExtResource("17_flv2h")
region = Rect2(128, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lns2y"]
atlas = ExtResource("17_flv2h")
region = Rect2(144, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqptt"]
atlas = ExtResource("17_flv2h")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_85ws3"]
atlas = ExtResource("17_flv2h")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gsey"]
atlas = ExtResource("17_flv2h")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5aab"]
atlas = ExtResource("17_flv2h")
region = Rect2(48, 32, 16, 16)

[node name="Pixelated2DMain" type="Node2D" node_paths=PackedStringArray("character")]
texture_filter = 1
script = ExtResource("1_sqiqn")
character = NodePath("Cobia")
every_enemies = Array[PackedScene]([ExtResource("2_kor3a"), ExtResource("3_5jhd6"), ExtResource("4_8ll1f")])
gameover_scene_path = "res://scenes/scoreboard_scene.tscn"
gameover_song_path = "res://assets/musics/Magic Scout - Farm_small.mp3"

[node name="EnemySpawnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true
autostart = true

[node name="CorncobSpawnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NotchRect" type="ReferenceRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 104.0
grow_horizontal = 2
border_width = 2.0

[node name="TopUIRect" type="ReferenceRect" parent="CanvasLayer/Control"]
texture_filter = 1
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="HPUI" type="Sprite2D" parent="CanvasLayer/Control/TopUIRect"]
position = Vector2(173, 160)
scale = Vector2(5, 5)
texture = ExtResource("5_d64xt")

[node name="HPUI2" type="Sprite2D" parent="CanvasLayer/Control/TopUIRect"]
position = Vector2(905, 160)
scale = Vector2(5, 5)
texture = ExtResource("6_3lu0v")

[node name="HPUI3" type="Sprite2D" parent="CanvasLayer/Control/TopUIRect"]
position = Vector2(905, 259)
scale = Vector2(5, 5)
texture = ExtResource("7_75yve")

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 855.0
offset_top = 125.0
offset_right = 1145.0
offset_bottom = 194.0
text = "0"
label_settings = SubResource("LabelSettings_nl51t")

[node name="CornCobLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 855.0
offset_top = 225.0
offset_right = 1145.0
offset_bottom = 294.0
text = "0"
label_settings = SubResource("LabelSettings_vu2um")

[node name="HPLabel" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 122.0
offset_top = 120.0
offset_right = 412.0
offset_bottom = 189.0
text = "3"
label_settings = SubResource("LabelSettings_vu2um")

[node name="Label" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 144.0
offset_top = 100.0
offset_right = 406.0
offset_bottom = 170.0
text = "Key Press: "
label_settings = SubResource("LabelSettings_ll3m6")

[node name="DebugLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 735.0
offset_top = 9.0
offset_right = 1061.0
offset_bottom = 326.0
theme_override_font_sizes/normal_font_size = 44
text = "debugg"

[node name="ReferenceRect" type="ReferenceRect" parent="CanvasLayer/Control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 340.0

[node name="Background" type="Node2D" parent="."]

[node name="TopBG" type="Sprite2D" parent="Background"]
position = Vector2(-61, -16)
scale = Vector2(5.48611, 5.48611)
texture = ExtResource("6_gf4l3")
centered = false

[node name="BottomBG" type="Sprite2D" parent="Background"]
position = Vector2(0, 1795)
scale = Vector2(4.94309, 4.94309)
texture = ExtResource("7_yye6d")
centered = false

[node name="CropsRows" type="Node2D" parent="."]
position = Vector2(1090, 0)

[node name="Row2" type="Sprite2D" parent="CropsRows"]
position = Vector2(-551, 1617)
scale = Vector2(5, 5)
texture = ExtResource("7_u8sly")

[node name="Row3" type="Sprite2D" parent="CropsRows"]
position = Vector2(-551, 1252)
scale = Vector2(5, 5)
texture = ExtResource("7_u8sly")
flip_h = true

[node name="Row4" type="Sprite2D" parent="CropsRows"]
position = Vector2(-551, 887.5)
scale = Vector2(5, 5)
texture = ExtResource("7_u8sly")
flip_v = true

[node name="Row5" type="Sprite2D" parent="CropsRows"]
position = Vector2(-551, 522.5)
scale = Vector2(5, 5)
texture = ExtResource("7_u8sly")
flip_h = true

[node name="BirdBlockers" type="Node2D" parent="."]
visible = false

[node name="Blocker" parent="BirdBlockers" groups=["blockertop"] instance=ExtResource("8_sruy8")]

[node name="Blocker2" parent="BirdBlockers" groups=["blockerbottom", "blockertop"] instance=ExtResource("8_sruy8")]
position = Vector2(131, 1742)

[node name="Grounds" parent="." instance=ExtResource("8_40p8q")]
visible = false

[node name="Walls" parent="." instance=ExtResource("9_y41ub")]
visible = false

[node name="EnemySpawners" parent="." instance=ExtResource("10_4qgsn")]
unique_name_in_owner = true
visible = false

[node name="CorncobSpawner" parent="." instance=ExtResource("11_vfcf1")]
unique_name_in_owner = true
visible = false

[node name="Enemies" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CornCobs" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Cobia" parent="." instance=ExtResource("12_pg2vy")]
position = Vector2(120, 1590)
downward_travel_offset = 10
metadata/_edit_group_ = true

[node name="LabelResetTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ojkvo")
}

[node name="Candies" type="Sprite2D" parent="." groups=["references"]]
visible = false
position = Vector2(0, -268)
scale = Vector2(1.48889, 1.48889)
centered = false

[node name="UI_Main" type="Node2D" parent="."]
position = Vector2(0, 100)

[node name="Buttons" type="Node2D" parent="UI_Main"]

[node name="SwapButton" type="TouchScreenButton" parent="UI_Main/Buttons"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.623529)
material = SubResource("ShaderMaterial_hckqv")
position = Vector2(384, 1932)
scale = Vector2(14, 14)
texture_normal = ExtResource("14_4j7ox")
texture_pressed = ExtResource("15_2ndgp")
action = "swap_direction"
script = ExtResource("16_kt6oy")

[node name="FlipCooldown" type="Timer" parent="UI_Main/Buttons/SwapButton"]
process_callback = 0
wait_time = 0.4
one_shot = true

[node name="DebugButton" type="TouchScreenButton" parent="UI_Main/Buttons"]
modulate = Color(1, 1, 1, 0.623529)
position = Vector2(24, 1720)
scale = Vector2(12, 12)
texture_normal = SubResource("AtlasTexture_pj2hy")
texture_pressed = SubResource("AtlasTexture_l1y6d")
action = "debugpress"
script = ExtResource("19_o2rfv")

[node name="DebugButton2" type="TouchScreenButton" parent="UI_Main/Buttons"]
modulate = Color(1, 1, 1, 0.623529)
position = Vector2(24, 1925)
scale = Vector2(12, 12)
texture_normal = SubResource("AtlasTexture_vwd4q")
texture_pressed = SubResource("AtlasTexture_lns2y")
action = "debugpress2"
script = ExtResource("19_o2rfv")

[node name="UpButton" type="TouchScreenButton" parent="UI_Main/Buttons"]
modulate = Color(1, 1, 1, 0.623529)
position = Vector2(672, 1692)
scale = Vector2(14, 14)
texture_normal = SubResource("AtlasTexture_gqptt")
texture_pressed = SubResource("AtlasTexture_85ws3")
action = "switch_lane_up"

[node name="DownButton" type="TouchScreenButton" parent="UI_Main/Buttons"]
modulate = Color(1, 1, 1, 0.623529)
position = Vector2(672, 1932)
scale = Vector2(14, 14)
texture_normal = SubResource("AtlasTexture_8gsey")
texture_pressed = SubResource("AtlasTexture_s5aab")
action = "switch_lane_down"

[node name="MainCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(-9.23872e-07, 9.53674e-07)
anchor_mode = 0

[node name="ShakerComponent2D" type="Node2D" parent="MainCamera"]
unique_name_in_owner = true
position = Vector2(-1.04308e-07, 0)
script = ExtResource("18_06dll")
duration = 0.5
fade_in = 0.001
fade_out = 0.933
shakerPreset = ExtResource("19_bvgs0")

[node name="ZoomedOutCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-368, -557)
offset = Vector2(0, -400)
anchor_mode = 0
enabled = false
zoom = Vector2(0.59, 0.59)

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="CorncobSpawnTimer" to="." method="_on_corncob_spawn_timer_timeout"]
[connection signal="timeout" from="LabelResetTimer" to="." method="_on_label_reset_timer_timeout"]
[connection signal="timeout" from="UI_Main/Buttons/SwapButton/FlipCooldown" to="UI_Main/Buttons/SwapButton" method="_on_flip_cooldown_timeout"]
